--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
     "mysql2": "^2.3.3",
+    "nestjs-firebase": "^8.2.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
